# operations

./: .breadcrumbs.yaml  .gitignore  .mcp.json  ACAT_ASESSEMENT_SEED.md  ACAT_SESSION_PROMPT.md  BEHAVIORAL_GRAMMAR_V1.md  CITATION.cff  CLAUDE.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTROLLED_DOCUMENTS.md  CURRENT.md  DRIFT_LOG.md  DashboardTab.tsx  GOVERNANCE.md  HAIOS.mermaid  HARMONIZATION-AGI.md  HUMANAIOS_OPERATIONS_ARCHITECTURE.md  LIMINAL-RESONANCE___HumanAIOS___S-042626-D.html  LONGVIEW_GRANTS_PROPOSAL_DRAFT.md  MARKET_HARMONIC_RESEARCH_PRINCIPLE_SEED.md  MOLT_STATE.md  OPERATOR_RUNBOOK.md  OPS_IMPROVEMENT_PLAN.md  OPS_ROADMAP_V1.2.md  PARTICIPATE.md  PHASE1_README.md  PHASE2_SETUP.md  PRINCIPLES_SEED.md  PRINCIPLES_SEED_V1_0.md  QUICKSTART.md  README.md  RECEIPT_S-051926-01.md  RECURSIVE _IMPROVEMENT_SEED.md  REDTEAM_AUDIT_SEED.md  REGISTERED.md  SECURITY.md  SEED.md  (+22 more)
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.doc-control/: TEAM_OWNERS.md  frontmatter.schema.json  reconciliation_S070126.csv  validate.py
.empirica/: project.yaml
.github/: PULL_REQUEST_TEMPLATE.md
acat/: HF_DATASET_CARD.md  README.md  canonical_stats.json
architecture/: SYSTEM_MAP.mermaid  THREE_POOLS_F1_SEED_V1_1.md  architecture_acat_automation_plan.md  molt_state.schema.json
audits/: 5S_SIXSIGMA_ACAT_AUDIT_CHARTER_S070726.md  AUDIT_ACAT_RESPONSE_S-070226.md  AUDIT_ACAT_S-062726.md  AUDIT_DOCS_S-062726.md  AUDIT_LESSONS_AND_PLAN_UPDATE_S070726.md  AUDIT_SITE_S-062726.md  AUDIT_TOOLS_S-062726.md  CHECKPOINT_SCORING_VALIDITY_S070226.md  (+22 more)
(+676 files in other folders)
