[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "acat"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jsonschema>=4.21.0",
    "PyYAML>=6.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["acat*"]
